# church-music-organizer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  FEATURES.md  IMPLEMENTATION.md  LICENSE  OMR_AGENT_INSTRUCTIONS.md  OMR_IMPLEMENTATION_PLAN.md  OMR_IMPROVEMENT_PLAN.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  TODO.md  USAGE.md  alembic.ini  convert_pdf_to_musicxml.py  debug_staves.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  test_boze_moj.py  test_integration.py  test_jana_kantego.py  test_psalm_adwent.py
.claude/agents/: backend-engineer.md  code-reviewer.md  devops-engineer.md  ocr-engineer.md  product-owner.md  qa-engineer.md  ui-engineer.md
.github/: AGENTS.md  copilot-instructions.md  development-process.md  process-instruction.md
.github/agents/: git-flow.agent.md  ml-research.agent.md  omr-architect.agent.md  omr-engine.agent.md  product-owner.agent.md
.github/prompts/: plan-omrPdfToMusicxml.prompt.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 364f650a2b1f_add_schema_foundation_sources_.py  5ddf78bdb32d_add_extracted_text_to_music_file.py  8cc60e7f79d3_initial_schema.py
docs/: ROADMAP.md  benchmark-fixture-inventory-wave1.md  iteration-1-benchmark-contract.md  prd-repo-hygiene-and-benchmark-governance.md  proposal-assessment-and-plan-update.md
docs/knowledge/: choral_music_taxonomy.md  harmony_analysis_reference.md  installation.md  score_descriptor_schema.md
memories/repo/: planning.md
resources/: links.txt
scripts/: _verify_underlay_cli.py  analyze_reference.py  compare_ocr.py  eval_pipeline.py  eval_set.py  generate_synthetic_satb_musicxml.py  generate_test_fixtures.py  migrate_to_library.py  musicxml_to_case_yaml.py
src/: __init__.py
src/analysis/: __init__.py  score_analyzer.py  score_descriptor.py
src/app/: main.py
src/app_ng/: __init__.py  files.py  main.py  shared.py
src/database/: __init__.py  database.py  models.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  reference_compare.py  scorecard.py
src/llm/: __init__.py  claude_cli_client.py  client.py  lyric_underlayer.py  lyrics_cleaner.py  metadata_extractor.py  musicxml_validate.py  score_corrector.py  translator.py
src/ocr/: __init__.py  ingestion.py  lyrics_aligner.py  musicxml_converter.py  musicxml_validator.py  omr_engine.py  omr_postprocessor.py  part_definition.py  pdf_text_extractor.py  pdf_to_musicxml.py  pitch_corrector.py  preprocessing.py  scan_processor.py  score_analyzer.py  score_builder.py  sheet_music_ocr.py  staff_detector.py  staff_splitter.py  text_classifier.py  text_region_extractor.py  voice_detector.py  (+1 more)
tests/: conftest.py  test_database.py  test_ocr.py  test_omr.py
(+85 files in other folders)
