[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "church-music-organizer"
version = "0.1.0"
description = "A music sheet OCR and organization application"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.poetry]
name = "church-music-organizer"
version = "0.1.0"
description = "A music sheet OCR and organization application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = ">=1.28.0"
sqlalchemy = ">=2.0.0"
python-dotenv = ">=1.0.0"
pytesseract = ">=0.3.10"
Pillow = ">=10.0.0"
pdf2image = ">=1.16.3"
opencv-python = ">=4.8.0"
music21 = ">=9.1.0"
alembic = ">=1.12.0"
python-magic = ">=0.4.27"
pymupdf = "^1.27.1"
homr = {version = "^0.6.1", python = ">=3.10,<3.13"}
oemer = {version = "^0.1.8", python = ">=3.10,<3.13"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
black = ">=23.0.0"
isort = ">=5.0.0"
pytest-cov = ">=4.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
