[tool.poetry]
name = "church-music-organizer"
version = "0.1.0"
description = "Church music collection organizer with OCR and MusicXML support"
authors = ["Adrian Skutnik <skutnik.adrian@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = ">=1.28.0"
sqlalchemy = ">=2.0.0"
python-dotenv = ">=1.0.0"
pytesseract = ">=0.3.10"
Pillow = ">=10.0.0"
pdf2image = ">=1.16.3"
opencv-python = ">=4.8.0"
music21 = ">=9.1.0"
google-genai = ">=1.0.0"
verovio = ">=5.0.0"
cairosvg = ">=2.7.0"
alembic = ">=1.12.0"
python-magic = ">=0.4.27"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.12.0"
black = ">=23.0.0"
isort = ">=5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
source = ["src"]
omit = ["src/app/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
